# testing-examples

./: .gitignore  pyproject.toml
src/weather/: example.py
test/weather/: test_example.py
