[tool.poetry]
name = "testing-examples"
version = "0.1.0"
description = "Examples of writing tests for python"
authors = ["Peter Grimshaw <pagrimshaw@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.0"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
